@@ -1,4 +1,9 @@
 2013-...  Ongoing changes in git.
+2013-05-17:
+	- Improved handling of variable state change handling.
+	- Active eventing of current track position
+	- provide callbacks for user-hooks (scrobbling ? LCD display ?)
+
 2012-10-12: GMediaRender 0.0.7dev (Henner Zeller)
 	- Support get duration and position of current stream.
 	- Support basic commands:
